# Kinematica

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  todo.txt  ui_dropdown.h
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md
materials/: aerogel.json  ice.json  plastic.json  plastic_generic.json  rubber.json  solar_core.json  sticky_putty.json  titanium.json  tungsten.json  wood.json
math/: Mat3.h  Quat.h  Vec3.h
physics/: BroadPhase.cpp  BroadPhase.h  Collider.h  CompoundBuilder.h  Constraints.h  FrameAllocator.h  Material.h  PhysicsFactory.cpp  PhysicsFactory.h  PhysicsWorld.cpp  PhysicsWorld.h  Raycast.cpp  Raycast.h  RigidBody.h  SoftBody.cpp  SoftBody.h  Spring.h
physics/collision/: Collider.h  EPA.h  EPATypes.h  GJK.h  GJKSimplex.h  Minkowski.h  Simplex.h  SupportPoint.h  TriangleMesh.cpp  TriangleMesh.h
physics/shapes/: BoxShape.h  CapsuleShape.h  ConvexShape.h  PolyhedronShape.h  SphereShape.h
render/: Frustum.h  Renderer.cpp  Renderer.h
shaders/: lighting.fs  lighting_instancing.vs
ui/: UI.cpp  UI.h
utils/: JsonUtils.cpp  JsonUtils.h  MaterialLoader.cpp  MaterialLoader.h  MeshGen.cpp  MeshGen.h
